--- a/src/index.css
+++ b/src/index.css
@@ -3,16 +3,17 @@
   --clr-secondary: #272d36;
   --orangegradient:  linear-gradient(90deg, rgba(218,92,64,1) 0%, rgba(219,95,68,1) 28%, rgba(225,120,97,1) 86%);
   --white-boxshadow-dark: 0px 22px 34pxrgba(0, 0, 0, .1);
-
+  --white-above-gray-dark: #9d9d9d;
+  --body: #F1F1F1;
 }
 
-html {
-  overscroll-behavior: none;
-  height: 100vh;
 
-}
-body{
+html, body {
+  font-family: Montserrat,sans-serif;
+  font-size: 16px;
   height: 100%;
+  font-weight: 400;
+  background-color:#F1F1F1 !important;
 }
 
 *,
