--- a/src/pages/TicketPage/ticketpage.css
+++ b/src/pages/TicketPage/ticketpage.css
@@ -1,3 +1,4 @@
+
 #event-page, .detail{
     position: relative;
 }
@@ -62,13 +63,9 @@
     }
     
 }
-@media  screen and (max-width: 768px){
-    .container{
-        max-width: 540px;
-    }
-}
+/* @ */
 
-@media screen and  (min-width: 1400px){
+@media screen and  (max-width: 1400px){
     .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
         max-width: 1320px;
     }
@@ -85,16 +82,22 @@
         top: 0;
         margin-bottom: -10px;
     }
+    #event-page .cont-box  {
+        padding: 20px;
+        margin-bottom: 20px;
+    }
+    .detail-top-title {
+        font-size: 26px;
+    }
+    #event-page .detail-top-body .detail-top-area .detail-top-area-left {
+        max-width: 375px;
+    }
 }
 @media screen and  (min-width: 1200px){
     .container, .container-lg, .container-md, .container-sm, .container-xl {
         max-width: 1140px;
     }
     
-}
-
-@media (max-width: 1400px){
-
 }
 
 #event-page .poster {
@@ -109,5 +112,58 @@
 #event-page .poster img {
     width: 100%;
     height: auto;
-    border-radius:30px;
+    border-radius:20px;
 }
+#event-page .cont-box  {
+    background:#fff;
+    border-radius:5px;
+    padding: 30px;
+    margin-bottom: 30px;
+    min-height: calc(100% - 30px);
+    z-index: 2;
+}
+
+.cont-box  {
+    background: #fff;
+    border-radius: 20px;
+    padding: 30px;
+    margin-bottom: 30px;
+}
+
+ .detail-top-title {
+    font-size: 28px;
+    font-weight: 600;
+    color: #000;
+}
+
+
+#event-page .detail-top-area .detail-top-area-left {
+    max-width: 450px;
+    padding-left: 10px;
+}
+
+
+@media (max-width: 992px){
+
+    #event-page .detail-top-area .detail-top-area-left {
+        width: 100%;
+        max-width: 100%;
+    }
+}
+#event-page .detail-top-area .detail-top-area-left .detail-top-title-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    grid-gap: 0 15px;
+    gap: 0 15px;
+}
+#event-page .detail-top-area .detail-top-area-left .detail-top-left-content ul {
+    display: flex;
+    flex-wrap: wrap;
+    grid-gap: 15px 0;
+    gap: 15px 0;
+}
+ul{
+    list-style: none;    
+}
+
