--- a/src/pages/TicketPage/components/styles.css
+++ b/src/pages/TicketPage/components/styles.css
@@ -1,17 +1,28 @@
 
-#event-page .detail-top-body .detail-top-area .detail-top-area-left .detail-top-left-content ul li:last-child {
-    width: 100%;
+#event-page .detail-top-area .detail-top-area-left .detail-top-left-content ul {
+    display: flex;
+    flex-wrap: wrap;
+    grid-gap: 15px 0;
+    gap: 15px 0;
+}
+ul{
+    list-style: none;    
 }
 
-#event-page .detail-top-body .detail-top-area .detail-top-area-left .detail-top-left-content ul li:last-child {
+#event-page .detail-top-left-content ul li:last-child {
     display: flex;
+    width: 100%;
+
 }
 @media (max-width: 1400px){
-    #event-page .detail-top-body .detail-top-area .detail-top-area-left .detail-top-left-content ul li {
+    #event-page .detail-top-left-contentul li {
         font-size: 14px;
     }
+    #event-page .detail-top-left-content ul li svg {
+        font-size: 18px;
+    }
 }
-#event-page .detail-top-body .detail-top-area .detail-top-area-left .detail-top-left-content ul li {
+#event-page .detail-top-left-content ul li {
     width: 50%;
     align-items: center;
     grid-gap: 0 10px;
@@ -20,4 +31,101 @@
     font-weight: 500;
     color: var(--white-above-gray-dark);
     display: none;
+}
+
+#event-page .detail-top-left-content ul li svg {
+    font-size: 22px;
+    flex-shrink: 0;
+    color: var(  --white-above-orange    );
+}
+svg {
+    width: 1em;
+    height: 1em;
+    display: block;
+}
+
+/* ************************************************************************* */
+/* BreadCrumbs */
+
+@media (max-width: 1400px){
+    .breadcrumb {
+        margin-bottom: 20px;
+    }
+    .breadcrumb ol li:before {
+        height: 7px;
+        right: 10px;
+        transform: translateY(-5px) rotate(135deg);
+    }
+    .breadcrumb ol li:after {
+        height: 7px;
+        right: 10px;
+        transform: translateY(0) rotate(45deg);
+    }
+    .breadcrumb ol li {
+        font-size: 13px;
+        padding-right: 20px;
+    }
+}
+
+.breadcrumb {
+    padding-left: 7px;
+    margin-bottom: 25px;
+}
+.breadcrumb ol {
+    display: flex;
+    align-items: center;
+    max-height: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+}
+ol, ul {
+    list-style: none;
+}
+.breadcrumb ol li:after {
+    content: "";
+    width: 2px;
+    height: 9px;
+    background: var(--black);
+    position: absolute;
+    right: 15px;
+    top: 50%;
+    transform: translateY(-2px) rotate(45deg);
+    border-radius: 2px;
+}
+
+.breadcrumb ol li:before {
+    content: "";
+    width: 2px;
+    height: 9px;
+    background: var(--black);
+    position: absolute;
+    right: 15px;
+    top: 50%;
+    transform: translateY(-7px) rotate(135deg);
+    border-radius: 2px;
+}
+
+.breadcrumb ol li {
+    font-size: 15px;
+    font-weight: 900;
+    color: var(--white-above-orange);
+    position: relative;
+    padding-right: 30px;
+    display: flex;
+    align-items: center;
+}
+.breadcrumb ol li a {
+    color: var(--black);
+    text-decoration: none !important;
+    transition: .3s color,.3s border-color,.3s background-color;
+}
+.breadcrumb ol li:last-child:before, .breadcrumb ol li:last-child:after {
+    display: none;
+}
+.breadcrumb ol li:first-child a{
+    color: var(--white-above-orange)!important;
+}
+
+.breadcrumb ol li a:hover{
+    opacity: 0.5;
 }
