--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
   --white-boxshadow-dark: 0px 22px 34pxrgba(0, 0, 0, .1);
   --white-above-gray-dark: #9d9d9d;
   --body: #F1F1F1;
+  --white-above-orange: rgba(225,120,97,1) ;
+  --black: #000000;
 }
 
 
@@ -13,7 +15,7 @@ html, body {
   font-size: 16px;
   height: 100%;
   font-weight: 400;
-  background-color:#F1F1F1 !important;
+  background-color:var(--body) !important;
 }
 
 *,
