--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,8 @@
   --white: #FFFFFF;
   --orange: rgba(225,120,97,1) ;
   --orange-hover: rgba(219,95,68,1);
+  --white-above-gray-light:#e2e2e2;
+  --light-orange:rgb(255, 214, 204);
 }
 
 
